samples/_failures_safe/1761695183_438a2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6eb4485.c: In function ‘generate_cube_points’:
./samples/SAFE/__tmp_f6eb4485.c:142: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_f6eb4485.c:141:9: note: to match this ‘{’
  141 |         {-half, half
      |         ^
./samples/SAFE/__tmp_f6eb4485.c:141:9: error: expected declaration or statement at end of input
